# recall-tooling-ocr-server

./: .bazelrc  .dockerignore  .shellcheckrc  BUILD.bazel  LICENSE  MODULE.bazel  NOTICE  go.mod  go.sum  go.work.sum
api/openapi/: BUILD.bazel
api/proto/recall_tooling_ocr_server/v1/: BUILD.bazel  recall_tooling_ocr_server.proto
bazel/bazelrc/: cgo.bazelrc
bazel/repositories/: BUILD.bazel  gosseract.bzl
bazel/shell/: lib.bash  repo_command.sh.in
cmd/: README.md
cmd/recal_tooling_ocr_server/: BUILD.bazel  main.go
configs/: BUILD.bazel  default_config.toml  loader.go
docs/: README.md
scripts/: BUILD.bazel  cli_docgen.sh.in  entrypoint.sh.in  go_tidy.sh.in  golangci_lint.sh.in  govulncheck.sh.in  shellcheck.sh.in  shfmt.sh.in  unused_gh_actions.sh.in
