load("@aspect_bazel_lib//lib:testing.bzl", "assert_archive_contains")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/karafrorg-recall/recall-tooling-ocr-server
# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
# gazelle:resolve proto proto validate/validate.proto @com_github_envoyproxy_protoc_gen_validate//validate:validate_proto
# gazelle:resolve proto go validate/validate.proto @com_github_envoyproxy_protoc_gen_validate//validate:validate
# gazelle:resolve proto proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto go google/api/annotations.proto @googleapis//google/api:annotations_go_proto
# gazelle:resolve proto proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto
# gazelle:resolve proto go google/api/field_behavior.proto @googleapis//google/api:field_behavior_go_proto
gazelle(name = "gazelle")

alias(
    name = "check",
    actual = "//scripts:check",
)

alias(
    name = "tidy",
    actual = "//scripts:tidy",
)

alias(
    name = "generate",
    actual = "//scripts:generate",
)
