load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:ignore
go_binary(
    name = "recal_tooling_ocr_server",
    data = ["@tessdata_eng//file:eng.traineddata"],
    embed = [":recal_tooling_ocr_server_lib"],
    env = {
        "TESSDATA_RLOCATION": "$(rlocationpath @tessdata_eng//file:eng.traineddata)",
    },
    importpath = "github.com/karafrorg-recall/recall-tooling-ocr-server/cmd/recal_tooling_ocr_server",
    visibility = ["//visibility:public"],
)

# gazelle:ignore
go_library(
    name = "recal_tooling_ocr_server_lib",
    srcs = ["main.go"],
    cgo = True,
    importpath = "github.com/karafrorg-recall/recall-tooling-ocr-server/cmd/recal_tooling_ocr_server",
    visibility = ["//visibility:private"],
    deps = [
        "@gosseract_local//:gosseract",
        "@rules_go//go/runfiles",
    ],
)
