load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library")
load("@rules_proto_grpc_grpc_gateway//:gateway_grpc_compile.bzl", "gateway_grpc_compile")

proto_library(
    name = "recall_tooling_ocr_server_v1_proto",
    srcs = ["recall_tooling_ocr_server.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "recall_tooling_ocr_server_v1_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc_v2",
        "@rules_go//proto:go_proto",
    ],
    importpath = "github.com/karafrorg-recall/recall-tooling-ocr-server/api/proto/recall_tooling_ocr_server/v1",
    proto = ":recall_tooling_ocr_server_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "recall_tooling_ocr_server",
    embed = [":recall_tooling_ocr_server_v1_go_proto"],
    importpath = "github.com/karafrorg-recall/recall-tooling-ocr-server/api/proto/recall_tooling_ocr_server/v1",
    visibility = ["//visibility:public"],
)

gateway_grpc_compile(
    name = "recall_tooling_ocr_server_v1_gateway_grpc",
    protos = [":recall_tooling_ocr_server_v1_proto"],
)
